--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <hr class="separator">
 
         <h2 class="mail-header">Processing Mail with AJAX</h2>
-        <form action="index.php" id="mail-form">
+
+        <form action="index.php/" method="POST" id="mail-form">
             <label for="firstname">First Name</label>
             <input type="text" id="firstname" name="firstname" placeholder="first name" required>
 
