--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <label for="firstname">Email</label>
             <input type="email" id="email" name="email" placeholder="email" required>
 
-            <input type="submit" value="Submt">
+            <input type="submit" value="Submit">
         </form>
     </main>
 
