--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <label for="firstname">Email</label>
             <input type="email" id="email" name="email" placeholder="email" required>
 
+            <label for="message">Your Message</label>
+            <textarea name="message" id="message" cols="30" rows="10"></textarea>
+
             <input type="submit" value="Submit">
         </form>
     </main>
