--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
             <label for="message">Your Message</label>
             <textarea name="message" id="message" cols="30" rows="10"></textarea>
 
-            <input type="submit" value="Submit">
+            <div class="submit-wrapper">
+                <span class="submit">Submit</span>
+                <i class="fas fa-paper-plane"></i>
+            </div>
+            
         </form>
     </main>
 
